<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PetAdd3"
    android:background="#DEFFE6C6"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/add_pet"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:fontFamily="@font/quicksand_bold"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:text="@string/gender"
        android:textSize="20sp"
        app:fontFamily="@font/quicksand"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"/>

    <RadioGroup
        android:id="@+id/gender_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/gender_girl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/girl"
            android:textSize="20sp"
            app:fontFamily="@font/quicksand"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.1" />

        <RadioButton
            android:id="@+id/gender_boy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/boy"
            android:textSize="20sp"
            app:fontFamily="@font/quicksand"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.1" />

        <RadioButton
            android:id="@+id/gender_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/other"
            android:textSize="20sp"
            app:fontFamily="@font/quicksand"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/neutered"
        android:textSize="20sp"
        app:fontFamily="@font/quicksand"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"/>

    <RadioGroup
        android:id="@+id/neutered_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/neutered_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textSize="20sp"
            app:fontFamily="@font/quicksand"
            android:layout_weight="0.3"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.15" />

        <RadioButton
            android:id="@+id/neutered_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textSize="20sp"
            app:fontFamily="@font/quicksand"
            android:layout_weight="0.4"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.1" />

        <RadioButton
            android:id="@+id/neutered_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_sure"
            android:textSize="20sp"
            app:fontFamily="@font/quicksand"
            android:layout_weight="0.1"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/weight"
        android:textSize="20sp"
        app:fontFamily="@font/quicksand"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/what_weight"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/enter_weight"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/kg"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:fontFamily="@font/quicksand" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_pet_back3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/back"
            android:textSize="25sp"
            android:layout_weight="0.3"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.4" />

        <Button
            android:id="@+id/add_pet_next3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/next"
            android:textSize="25sp"
            android:layout_weight="0.3"/>
    </LinearLayout>


</LinearLayout>